[package]
name = "web_base"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

#settings
lazy_static = "1.4.0"
config = "0.11"
env_logger = "0.9"
chrono = "0.4"

# aws_s3
tokio = { version = "1", features = ["full"] }
rust-s3 = "0.32.3"
anyhow = "1.0"

# Hash/Encryption
hex = "0.4"
sha2 = "0.10"
aes-gcm-siv = "0.10"
rust-argon2 = "1.0.0"
rand = "0.8.4"
uuid = { version = "0.8", features = ["serde", "v4"] }

#mailer
lettre = { version = "0.10.0-rc.4", features = ["tokio1", "tokio1-native-tls"] }